--- a/src/assets/styles/_reset.scss
+++ b/src/assets/styles/_reset.scss
@@ -1,4 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900);
+@import url(https://fonts.googleapis.com/css?family=Oswald:200,300,regular,500,600,700);
+@import url(https://fonts.googleapis.com/css?family=Oxanium:200,300,regular,500,600,700,800);
 
 * {
   padding: 0;
@@ -10,15 +11,18 @@ html {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
+body {
+  background-color: transparent;
+}
+$white: #ffffff;
+$gray: #f6f7f8;
+$dark-gray: #fcfcfc;
+$black: #181818;
+$dark-black: #000000;
+$red: #c81e11;
 
-$green: #70e8cb;
-$green_transparent: rgba(112, 232, 203, 0.56);
-$white: #fcfcfc;
-$white_transparent: rgba(252, 252, 252, 0.33);
-$black: #232323;
-
-$font_base: Base Neue;
-$font_sf: "Inter", sans-serif;
+$font_first: Oswald, sans-serif;
+$font_second: Oxanium, sans-serif;
 
 // ::selection {
 //   background-color: var(--primary-color);
@@ -31,3 +35,11 @@ $font_sf: "Inter", sans-serif;
 // ::-webkit-scrollbar-thumb {
 //   background-color: var(--primary-color);
 // }
+.webgl {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  outline: none;
+}
