--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -11,4 +11,34 @@ main {
     color: $gray;
     font-size: 20rem;
   }
+  .interaction {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 2rem;
+    z-index: 2;
+
+    button {
+      background-color: $black;
+      color: $white;
+      font-family: $font_first;
+      font-size: 1rem;
+      height: 2rem;
+      width: 5rem;
+      border: none;
+      border-radius: 3px;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
+      transition: 0.2s ease-in-out;
+      &:hover {
+        background-color: $red;
+        color: $white;
+      }
+    }
+  }
 }
