--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -31,6 +31,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 4;
 
     .logo {
       width: 2rem;
@@ -38,7 +39,12 @@ main {
   }
   .container_title {
     position: relative;
-    z-index: 1;
+    z-index: 2;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     .title {
       position: relative;
@@ -68,10 +74,10 @@ main {
 
     h2 {
       position: absolute;
-      top: 57%;
-      right: 0%;
-      transform: translate(0%, -50%);
-      font-family: Oswald, sans-serif;
+      top: 5%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-family: $font_first;
       color: #181818;
       font-size: 2.5rem;
       z-index: 2;
@@ -81,6 +87,32 @@ main {
         color: $red;
       }
     }
+
+    small {
+      width: 100%;
+      text-align: center;
+      position: absolute;
+      top: 80%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-family: $font_second;
+      color: #181818;
+      font-size: 1.5rem;
+      z-index: 2;
+      letter-spacing: 0.5rem;
+    }
+  }
+
+  .radius__bg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    pointer-events: none;
+    background: radial-gradient($white 10%, transparent);
   }
 
   .points__background {
@@ -103,6 +135,7 @@ main {
     justify-content: center;
     align-items: center;
     padding: 3vw;
+    z-index: 2;
 
     .statistics {
       display: flex;
@@ -122,7 +155,7 @@ main {
 
         h3 {
           font-family: $font_first;
-          font-size: 5rem;
+          font-size: 5vw;
           color: $black;
           margin-right: 1rem;
           font-weight: bold;
@@ -149,6 +182,7 @@ main {
     justify-content: center;
     align-items: center;
     padding: 3vw;
+    z-index: 3;
 
     .interaction {
       width: 40%;
@@ -184,23 +218,26 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    z-index: 3;
+
     .button__sound {
       position: relative;
-      width: 1.3rem;
+      width: auto;
       height: 1.5rem;
       cursor: pointer;
 
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: flex-end;
+      column-gap: 0.5rem;
 
       .line {
-        width: 1.5px;
+        width: 0.13rem;
         height: 1.5rem;
         background-color: $black;
       }
       .line1 {
-        height: 1rem;
+        height: 0.7rem;
       }
       .line2 {
         height: 1.5rem;
@@ -238,6 +275,7 @@ main {
     justify-content: center;
     align-items: center;
     padding: 3vw;
+    z-index: 3;
 
     p {
       position: relative;
@@ -254,6 +292,31 @@ main {
       span {
         color: $red;
       }
+    }
+  }
+
+  .compteur__vitesse {
+    position: absolute;
+    bottom: 0%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 18vw;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+
+    .compteur__bg {
+      width: 100%;
+      filter: drop-shadow(0 0 0.5rem rgba(0, 0, 0, 0.1));
+    }
+    .aiguille {
+      position: absolute;
+      bottom: -5%;
+      left: 50%;
+      transform: translate(-50%, 0) rotate(-84deg);
+      transform-origin: 50% calc(100% - 5%);
+      width: 5%;
     }
   }
 }
