--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -11,9 +11,85 @@ main {
 
   padding: 2vw;
 
+  .loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 999;
+    pointer-events: none;
+    width: 100%;
+    height: 100%;
+    background-color: $black;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .logo__loader {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 3vw;
+    }
+
+    .black {
+      opacity: 1;
+      z-index: 1;
+      transition: 0.2s ease-in-out;
+    }
+    .red {
+      opacity: 0;
+      z-index: 2;
+    }
+  }
+  .loader__active {
+    animation: loader 2s ease-in-out 1 forwards;
+    animation-delay: 1s;
+    @keyframes loader {
+      from {
+        background-color: $black;
+      }
+      to {
+        background-color: #000000;
+      }
+    }
+    .black {
+      opacity: 1;
+      animation: logo__loader__black 0.5s ease-in-out 1 forwards;
+      animation-delay: 1s;
+    }
+    @keyframes logo__loader__black {
+      from {
+        opacity: 1;
+      }
+      to {
+        opacity: 0;
+      }
+    }
+  }
+  .red {
+    opacity: 1;
+    animation: logo__loader 2s ease-in-out 1 forwards;
+    animation-delay: 0.5s;
+  }
+  @keyframes logo__loader {
+    0% {
+      opacity: 0;
+    }
+    50%,
+    80% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+
   .webgl {
     pointer-events: none;
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
