--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -10,14 +10,30 @@ main {
   overflow: hidden;
 
   padding: 2vw;
+  z-index: 0;
 
+  .webgl {
+    pointer-events: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    outline: none;
+    z-index: 5;
+    background-color: $dark-black;
+    transition: 3s ease-in-out;
+  }
+  .webgl__active {
+    background-color: transparent;
+    z-index: 3;
+  }
   .loader {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 999;
-    pointer-events: none;
+    pointer-events: initial;
     width: 100%;
     height: 100%;
     background-color: $black;
@@ -25,6 +41,65 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 999;
+
+    .conditions__sounds {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      pointer-events: none;
+      opacity: 0;
+      z-index: 3;
+
+      p {
+        font-family: $font_first;
+        color: $white;
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+      }
+
+      .agreement {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        column-gap: 1rem;
+
+        button {
+          font-family: $font_first;
+          color: #181818;
+          font-size: 1.1rem;
+          background-color: #ffffff;
+          border: none;
+          cursor: pointer;
+          text-transform: uppercase;
+          border: none;
+          width: 4.5rem;
+          height: 2rem;
+          padding-bottom: 0.1rem;
+          font-weight: 600;
+          border-radius: 0.2rem;
+          transition: 0.2s ease-in-out;
+
+          transition: 0.2s ease-in-out;
+
+          &:hover {
+            color: $black;
+            background-color: rgb(214, 214, 214);
+          }
+        }
+        #yesButton {
+          background-color: $red;
+          color: $white;
+
+          &:hover {
+            color: $white;
+            background-color: #a0170e;
+          }
+        }
+      }
+    }
 
     .logo__loader {
       position: absolute;
@@ -32,6 +107,7 @@ main {
       left: 50%;
       transform: translate(-50%, -50%);
       width: 3vw;
+      z-index: 2;
     }
 
     .black {
@@ -70,6 +146,40 @@ main {
         opacity: 0;
       }
     }
+
+    .conditions__sounds {
+      animation: conditions__sounds 1s ease-in-out 1 forwards;
+      animation-delay: 2.5s;
+
+      @keyframes conditions__sounds {
+        from {
+          opacity: 0;
+          pointer-events: none;
+        }
+        to {
+          opacity: 1;
+          pointer-events: initial;
+        }
+      }
+    }
+  }
+  .loader__finish {
+    animation: loader__finish 1s ease-in-out 1 forwards;
+
+    @keyframes loader__finish {
+      0% {
+        opacity: 1;
+        pointer-events: initial;
+      }
+      90% {
+        opacity: 0;
+        pointer-events: initial;
+      }
+      100% {
+        opacity: 0;
+        pointer-events: none;
+      }
+    }
   }
   .red {
     opacity: 1;
@@ -87,17 +197,6 @@ main {
     100% {
       opacity: 0;
     }
-  }
-
-  .webgl {
-    pointer-events: none;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    outline: none;
-    z-index: 2;
   }
 
   header {
@@ -215,7 +314,7 @@ main {
     justify-content: center;
     align-items: center;
     padding: 3vw;
-    z-index: 2;
+    z-index: 3;
 
     .statistics {
       display: flex;
@@ -406,7 +505,7 @@ main {
     left: 50%;
     transform: translate(-50%, 0);
 
-    z-index: 10;
+    z-index: 4;
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -450,6 +549,7 @@ main {
     align-items: flex-end;
     opacity: 0;
     transition: 0.2s ease-in-out;
+    z-index: 4;
 
     .compteur__bg {
       width: 100%;
