--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -118,6 +118,65 @@ main {
     .red {
       opacity: 0;
       z-index: 2;
+      transition: 0.2s ease-in-out;
+    }
+
+    .lds-ellipsis {
+      display: inline-block;
+      position: absolute;
+      top: 95%;
+      width: 80px;
+      height: 80px;
+      transition: 0.3s ease-in-out;
+    }
+    .lds-ellipsis div {
+      position: absolute;
+      top: 33px;
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: #fff;
+      animation-timing-function: cubic-bezier(0, 1, 1, 0);
+    }
+    .lds-ellipsis div:nth-child(1) {
+      left: 8px;
+      animation: lds-ellipsis1 0.6s infinite;
+    }
+    .lds-ellipsis div:nth-child(2) {
+      left: 8px;
+      animation: lds-ellipsis2 0.6s infinite;
+    }
+    .lds-ellipsis div:nth-child(3) {
+      left: 32px;
+      animation: lds-ellipsis2 0.6s infinite;
+    }
+    .lds-ellipsis div:nth-child(4) {
+      left: 56px;
+      animation: lds-ellipsis3 0.6s infinite;
+    }
+    @keyframes lds-ellipsis1 {
+      0% {
+        transform: scale(0);
+      }
+      100% {
+        transform: scale(1);
+      }
+    }
+    @keyframes lds-ellipsis3 {
+      0% {
+        transform: scale(1);
+      }
+      100% {
+        transform: scale(0);
+      }
+    }
+    @keyframes lds-ellipsis2 {
+      0% {
+        transform: translate(0, 0);
+      }
+      100% {
+        transform: translate(24px, 0);
+      }
     }
   }
   .loader__active {
@@ -131,6 +190,9 @@ main {
       to {
         background-color: #000000;
       }
+    }
+    .lds-ellipsis {
+      opacity: 0;
     }
 
     .black {
@@ -146,7 +208,21 @@ main {
         opacity: 0;
       }
     }
-
+    .red {
+      opacity: 1;
+      animation: logo__loader 2s ease-in-out 1 forwards;
+    }
+    @keyframes logo__loader {
+      0% {
+        opacity: 0;
+      }
+      50% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0;
+      }
+    }
     .conditions__sounds {
       animation: conditions__sounds 1s ease-in-out 1 forwards;
       animation-delay: 2.5s;
@@ -179,23 +255,6 @@ main {
         opacity: 0;
         pointer-events: none;
       }
-    }
-  }
-  .red {
-    opacity: 1;
-    animation: logo__loader 2s ease-in-out 1 forwards;
-    animation-delay: 0.5s;
-  }
-  @keyframes logo__loader {
-    0% {
-      opacity: 0;
-    }
-    50%,
-    80% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
     }
   }
 
